Tue Jun  9 08:49:43 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/cs.c src/ctlib/ct.c src/tds/convert.c src/tds/data.c:
	- revert Andrew Victor patch

Mon Jun  8 21:54:55 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/ctlib.h src/ctlib/blk.c src/ctlib/ct.c:
	- make _ct_get_client_type call shorter

Mon Jun  8 21:39:32 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c: avoid improper fall through on error

Mon Jun  8 20:38:45 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* BUGS: updated

Sat Jun  6 18:23:50 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml: update ClientCharset setting

Fri Jun  5 21:36:29 EDT 2009	JK Lowden <jklowden@freetds.org>
	* src/ctlib/cs.c src/ctlib/ct.c
	* src/tds/convert.c src/tds/data.c
	- Applied patch from Andrew Victor ML 24 November 2008
	- "CTLib implementation handles NVARCHAR strings as VARCHAR"

Thu Jun  4 07:39:49 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/api_status.txt: updated

Wed Jun  3 23:41:17 EDT 2009	JK Lowden <jklowden@freetds.org>
	* doc/api_status.txt doc/userguide.sgml
	- added ClientCharset connection attribute

Thu May 28 18:23:16 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h misc/types.txt src/apps/tsql.c src/ctlib/ct.c:
	* src/dblib/bcp.c src/dblib/buffering.h src/dblib/dblib.c:
	* src/dblib/rpc.c src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c src/tds/mem.c:
	* src/tds/query.c src/tds/read.c src/tds/tds_checks.c:
	* src/tds/token.c src/tds/unittests/dataread.c:
	* src/tds/unittests/utf8_1.c src/tds/unittests/utf8_2.c:
	- improve support for mssql2005 types (still under development)

Thu May 28 18:17:43 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c: add tests for mssql2005 types

Thu May 28 18:15:23 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.h: add SYBDECIMAL
